<resources>
    <string name="app_name">PalindromeApp</string>
    <string name="palindrome_dialog">isPalindrome</string>
    <string name="not_palindrome_dialog">notPalindrome</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="polindrome">Polindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="third_screen">Third Screen</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>

</resources>