<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins"
        android:text="@string/second_screen"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"

        android:text="@string/welcome" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
    />

    <TextView
        android:id="@+id/selectedUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:textSize="40sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >


        <Button
            android:id="@+id/chooseUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2B637B"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:text="@string/choose_a_user"
            />

    </LinearLayout>
</LinearLayout>